# reqly

./: Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs  parser.rs
src/formatter/: json.rs  mod.rs
src/http/: client.rs  mod.rs  request.rs
src/protocols/: mod.rs
src/protocols/graphql/: client.rs  mod.rs  query.rs  response.rs
src/protocols/http/: client.rs  request.rs  response.rs
src/protocols/websocket/: client.rs  connection.rs  message.rs  mod.rs
src/storage/: db.rs  models.rs  queries.rs
src/tui/: app.rs  events.rs  ui.rs
src/utils/: mod.rs
